chore: save stable state before refactoring